Bug 442765 - Can't delete file on desktop from contestual menu (right mouse button + click "Elimina")
Summary: Can't delete file on desktop from contestual menu (right mouse button + click...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: 5.22.90
Platform: Debian unstable Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords: regression
: 444090 444327 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-09-21 07:04 UTC by antonio
Modified: 2021-10-25 14:32 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23.2
Sentry Crash Report:


Attachments
lock screen image (1.43 MB, image/jpeg)
2021-09-21 07:04 UTC, antonio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description antonio 2021-09-21 07:04:35 UTC
Created attachment 141758 [details]
lock screen image

Hello,
I installed the beta plasma version, I noticed these problems:

OBSERVED RESULT

If you create a desktop file, press the right mouse button and then click on "Delete" from the contextual menu, nothing happens (but if you press SHIFT and repeat the same operation, instead it works)

EXPECTED RESULT

The file removal confirmation form appears

SUGGESTIONS:

- lock screen: the date and time are white and see little because they are on a light background (see attach.1)

- setup audio volume: you can make sure that the bell icon can be clicked to play a test sound and facilitate the notification volume adjustment?

Thank,
Antonio


SOFTWARE/OS VERSIONS
Linux/KDE Plasma:
(available in About System)
KDE Plasma Version: 5.22.90
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2
Comment 1 Nate Graham 2021-09-21 22:33:01 UTC
Let's keep the bug report talking about only one thing: the context menu issue.

This works for me. Probably related to the change in https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/552 though. Derek, would you be able to investigate?
Comment 2 Derek Christ 2021-09-22 12:00:11 UTC
This sounds very like BUG 442485 (the removeaction wasn't properly initialized unless the user presses shift at least once).
Any chance the fix didn't made it into the beta?
Comment 3 Nate Graham 2021-09-22 19:23:27 UTC
No, it definitely made it into the beta. At least, I can see the relevant commit on the Plasma/5.23 branch.

Does pressing shift once fix the issue for you?
Comment 4 Derek Christ 2021-09-23 10:10:36 UTC
I cannot really reproduce (at least on latest Git master and Neon Testing Live image)
Comment 5 Fabio 2021-10-16 14:30:19 UTC
I can reproduce the bug.
My guess is that OP enabled the "delete" contextual action (from the dolphin options), so in the right-click popup menu he has both the "trash" and "delete" actions available.
Move to trash works fine.
https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/552 added some code to filter "shift" keypresses and make "shift+trash" works as "delete".
Due to this code now also the "delete" action needs an actual shift keypress in order to work; just pressing the menu action "delete" won't actually work.
Comment 6 Bug Janitor Service 2021-10-16 15:27:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/604
Comment 7 Nate Graham 2021-10-19 15:23:10 UTC
Git commit b893a37fd9b3b5c28173c68ba963fb866a5ac0ed by Nate Graham, on behalf of Fabio Bas.
Committed on 19/10/2021 at 15:08.
Pushed by ngraham into branch 'master'.

Desktop as folder: restore functionality of the "delete" action

MR552 introduced RemoveAction but broke functionality of the "delete" action
when both the "trash" and "delete" actions are shown in the menu by requiring
the "shift" key being pressed for the action to work.

M  +33   -19   containments/desktop/plugins/folder/foldermodel.cpp
M  +1    -0    containments/desktop/plugins/folder/foldermodel.h

https://invent.kde.org/plasma/plasma-desktop/commit/b893a37fd9b3b5c28173c68ba963fb866a5ac0ed
Comment 8 Nate Graham 2021-10-19 15:23:48 UTC
Git commit 9f53bf160b347f76f2d4914408ac9bad6975275b by Nate Graham, on behalf of Fabio Bas.
Committed on 19/10/2021 at 15:23.
Pushed by ngraham into branch 'Plasma/5.23'.

Desktop as folder: restore functionality of the "delete" action

MR552 introduced RemoveAction but broke functionality of the "delete" action
when both the "trash" and "delete" actions are shown in the menu by requiring
the "shift" key being pressed for the action to work.


(cherry picked from commit b893a37fd9b3b5c28173c68ba963fb866a5ac0ed)

M  +33   -19   containments/desktop/plugins/folder/foldermodel.cpp
M  +1    -0    containments/desktop/plugins/folder/foldermodel.h

https://invent.kde.org/plasma/plasma-desktop/commit/9f53bf160b347f76f2d4914408ac9bad6975275b
Comment 9 Nate Graham 2021-10-20 15:23:39 UTC
*** Bug 444090 has been marked as a duplicate of this bug. ***
Comment 10 antonio 2021-10-21 06:18:44 UTC
I applied the fix, now it works.

Thanks
Comment 11 Patrick Silva 2021-10-24 18:11:26 UTC
*** Bug 444327 has been marked as a duplicate of this bug. ***
Comment 12 locutusofborg 2021-10-25 10:46:43 UTC
Just got the 5.23.1 update for Plasma in Manjaro and now when I rightclick an item on the desktop and try to delete it nothing happens. Other rightclick functions all seem to work without issue.
Comment 13 Nate Graham 2021-10-25 14:32:38 UTC
As the "Version Fixed In" field says, this is fixed in 5.23.2.