Desktop as folder: restore functionality of the "delete" action

MR552 introduced RemoveAction but broke functionality of the "delete" action
when both the "trash" and "delete" actions are shown in the menu by requiring
the "shift" key being pressed for the action to work.

BUG: 442765


(cherry picked from commit b893a37fd9b3b5c28173c68ba963fb866a5ac0ed)